# libmldpc

./: LICENSE  README  README.md  config.json  meson.build  meson_options.txt
.github/workflows/: build.yml
config/: arm64_cn10k_linux_gcc
docs/: Doxyfile.in  InstallPage.md  MainPage.md  install-docs.sh  meson.build
include/: meson.build  mldpc.h  tvm_dpdk_mldev.h
src/: meson.build  mldpc.c  tvm_dpdk_mldev.c
test/: main.c  meson.build
