# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023 Marvell.

option('enable_docs',
  type : 'boolean',
  value : false,
  description : 'Build API documentation with Doxygen when available',
)

option('enable_tests',
  type : 'boolean',
  value : false,
  description : 'Build the test application',
)
